<resources>
    <string name="app_name">Volume Guardian</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="activate_volume_control">Activate Volume Control</string>
    <string name="audio_warning_title">You Are Not Playing Any Audio Right Now, Do You Still Wish to Continue?</string>
    <string name="note">Note:</string>
    <string name="warning_desc">Volume Guardian adjusts your volume when you are playing music in the background. Volume guardian is not useful when there is no music playing!</string>
    <string name="cancel">Cancel</string>
    <string name="continue_">Continue</string>
    <string name="volume_control_disabled">Volume Control Disabled!</string>
    <string name="raise_device_volume">Please raise device volume</string>
    <string name="we_require_microphone_permission">We Require Microphone Permission !</string>
    <string name="permission_text">The application needs to access your microphone so that it knows when you start speaking. Once you start speaking, your music volume will be reduced automatically.</string>
    <string name="allow">Allow</string>
    <string name="volume_control_is_active">Volume Control is Active</string>
    <string name="how_does_it_work">How Does It Work?</string>
    <string name="continue_to_app">Continue to App</string>
    <string name="what_is_volume_guardian">What is Volume Guardian?</string>
    <string name="faq_desc_1">Volume Guardian Runs in the background and listens to you. As soon as it discovers someone is speaking, it reduces the music volume for better communication.</string>
    <string name="how_to_activate_volume_guardian">How to Activate Volume Guardian?</string>
    <string name="faq_desc_2">On the next screen, press the button with the speaker and minimize the application using home button</string>
</resources>