<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".view.fragment.HomeFragment"
    android:background="@color/bg_purple">

    <ImageView
        android:id="@+id/iv_speaker"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_speaker"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <ImageView
        android:id="@+id/iv_speaker_disabled"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_speaker_disabled"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:visibility="gone"/>

    <TextView
        android:id="@+id/tv_activate_volume"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_8sdp"
        android:fontFamily="@font/cutive_mono"
        android:gravity="center"
        android:text="@string/activate_volume_control"
        android:textSize="@dimen/_16sdp"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_speaker" />

    <TextView
        android:id="@+id/tv_disabled_volume"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_8sdp"
        android:fontFamily="@font/cutive_mono"
        android:gravity="center"
        android:text="@string/volume_control_disabled"
        android:textSize="@dimen/_16sdp"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_speaker_disabled"
        android:visibility="gone"/>

    <TextView
        android:id="@+id/tv_raise_volume"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_8sdp"
        android:fontFamily="@font/cutive_mono"
        android:gravity="center"
        android:text="@string/raise_device_volume"
        android:textSize="@dimen/_16sdp"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_disabled_volume"
        android:visibility="gone"/>

</androidx.constraintlayout.widget.ConstraintLayout>